--- a/src/index.html
+++ b/src/index.html
@@ -10,20 +10,17 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
   <style>
-  a { color: inherit; } 
+  a { color: inherit; }
   a:hover{
     text-decoration: none;
   }
   </style>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-  <div class="text-center" style="background-color:#f5bbbb; padding: 30px 5px;">
-    <a href="https://jsonworld.com">
-      <h2>JSON WORLD</h2>
-    </a>
-    <a href="https://jsonworld.com/demo/angular-8-user-registration-login-example-and-tutorial" target="_blank"><span>Angular 8 User Registration and Login Example and Tutorial</span></a>
-  </div>
+
 
   <app-root></app-root>
 </body>
